@@ -17,4 +17,17 @@ is( [ warnings { eval $package } ],
     'no warnings from using Test::Class::Moose with List::SomeUtils'
 );
 
+my $package2 = <<'EOF';
+package TestFor::Bare;
+
+use Test::Class::Moose::Role bare => 1;
+use Test::More;
+use List::SomeUtils qw( any );
+EOF
+
+is( [ warnings { eval $package2 } ],
+    array { end(); },
+    'no warnings from using Test::Class::Moose::Role with List::SomeUtils'
+);
+
 done_testing();
